--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     <link rel="stylesheet" href="./assets/css/theme.css">
     <link rel="stylesheet" href="./assets/css/loopple/loopple.css">
 </head>
+
 <body class="null">
     <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
-        <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+        <img id="myBtn" onclick="window.scroll({top: 0, behavior: 'smooth'});" src="/assets/img/icons/up.png" width="80px" height="80px">
+        </img>
         <div class="container">
-            <img src="" alt="">
+            <img src="/assets/img/intelg.png" alt="" style="width: 50px">
             <a class="navbar-brand" href="javascript:;" rel="tooltip" title="Designed and Coded by Creative Tim"
                 data-placement="bottom">
                 INTEL G SERVICES PVT. LTD.
@@ -36,9 +38,9 @@
                     <a href="#aboutus" class="dropdown-item border-radius-md">
                         About Us
                     </a>
-                    <!-- <a href="javascript:;" class="dropdown-item border-radius-md">
-                        Testimonials
-                    </a> -->
+                    <a href="#partners" class="dropdown-item border-radius-md">
+                        Partners
+                    </a>
                     <a href="#contactus" class="dropdown-item border-radius-md">
                         Contact Us
                     </a>
@@ -69,13 +71,20 @@
         </div>
     </header>
     <section class="py-5">
-        <div></div>
+        <br><br><br><br>
         <div class="container">
+            <div class="row">
+                <div class="col-8 mx-auto text-center">
+                    <h3>Accomplishments</h3>
+                </div>
+            </div>
+            <br><br><br>
             <div class="row justify-content-center text-center">
                 <div class="col-md-3">
                     <h1 class="text-gradient text-primary">323</h1>
-                    <h5 class="mt-3">FEs</h5>
-                    <p>Best in class feild employees</p>
+                    <h5 class="mt-3">Best in class feild employees</h5>
+                    <!-- <h5 class="mt-3">FEs</h5>
+                    <p>Best in class feild employees</p> -->
                 </div>
                 <div class="col-md-3">
                     <h1 class="text-gradient text-primary">2000+</h1>
@@ -84,8 +93,9 @@
                 </div>
                 <div class="col-md-3">
                     <h1 class="text-gradient text-primary">50+</h1>
-                    <h5 class="mt-3">Clients</h5>
-                    <p>Industry leading clients</p>
+                    <h5 class="mt-3">Industry leading clients</h5>
+                    <!-- <h5 class="mt-3">Clients</h5>
+                    <p>Industry leading clients</p> -->
                 </div>
             </div>
         </div>
@@ -100,46 +110,29 @@
             <div class="row mt-4">  
                 Verify the address claimed by the Candidate & ascertain whether the Candidate have ever been a resident of the given address by conducting a physical site visit at the given address.
             </div> -->
+        </div>
+    </div>
+    <div class="py-5" id="partners">
+        <div class="container">
             <div class="row">
                 <div class="col-8 mx-auto text-center">
                     <h3>Our Clients</h3>
                 </div>
             </div>
-            <br><br>
-            <div class="row mt-4">
-                <div class="col-lg-2 col-md-4 col-6 mb-4">
-                    <img class="w-100 opacity-9"
-                        src="/assets/img/logos/bob.png"
-                        alt="logo">
-                </div>
-                <div class="col-lg-2 col-md-4 col-6 mb-4">
-                    <img class="w-100 opacity-9"
-                        src="/assets/img/logos/canara.png"
-                        alt="logo">
-                </div>
-                <div class="col-lg-2 col-md-4 col-6 mb-4">
-                    <img class="w-100 opacity-9"
-                        src="/assets/img/logos/dbs.png"
-                        alt="logo">
-                </div>
-                <div class="col-lg-2 col-md-4 col-6 mb-4">
-                    <img class="w-100 opacity-9"
-                        src="/assets/img/logos/fis.png"
-                        alt="logo">
-                </div>
-                <div class="col-lg-2 col-md-4 col-6 mb-4">
-                    <img class="w-100 opacity-9"
-                        src="/assets/img/logos/icici.png"
-                        alt="logo">
-                </div>
-                <div class="col-lg-2 col-md-4 col-6 mb-4">
-                    <img class="w-100 opacity-9"
-                        src="/assets/img/logos/karnataka bank.png"
-                        alt="logo">
-                </div>
-            </div>
+            <br><br><br>
+            <section class="customer-logos slick-slider">
+                <div class="slick-slider"><img src="/assets/img/logos/partners/bob.png"></div>
+                <div class="slick-slider"><img src="/assets/img/logos/partners/canara.png"></div>
+                <div class="slick-slider"><img src="/assets/img/logos/partners/dbs.png"></div>
+                <div class="slick-slider"><img src="/assets/img/logos/partners/icici.png"></div>
+                <div class="slick-slider"><img src="/assets/img/logos/partners/karnataka.png"></div>
+                <div class="slick-slider"><img src="/assets/img/logos/partners/fis.png"></div>
+                <div class="slick-slider"><img src="/assets/img/logos/partners/ltim.png"></div>
+                <div class="slick-slider"><img src="/assets/img/logos/partners/tcs.png"></div>
+            </section>
         </div>
     </div>
+    <br><br><br><br><br>
     <section class="py-5" id="contactus">
         <div class="container">
             <div class="row align-items-center">
@@ -239,18 +232,18 @@
     <footer class="footer py-5">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 mb-4 mx-auto text-center">
-                    <a href="javascript:;" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
+                <div class="col-lg-12 mb-4 text-center">
+                    <a href="#aboutus" class="text-secondary me-xl-5 mb-sm-0 ">
                         About Us
                     </a>
-                    <a href="javascript:;" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
-                        Testimonials
+                    <a href="#partners" class="text-secondary me-xl-5 mb-sm-0 ">
+                        Partners
                     </a>
-                    <a href="javascript:;" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
+                    <a href="#contactus" class="text-secondary me-xl-5 mb-sm-0">
                         Contact Us
                     </a>
                 </div>
-                <div class="col-lg-8 mx-auto text-center mb-4 mt-2">
+                <div class="col-lg-12 mx-auto text-center mb-4 mt-2">
                     <a href="javascript:;" class="text-secondary me-xl-4 me-4">
                         <span class="text-lg fab fa-dribbble" aria-hidden="true"></span>
                     </a>
@@ -269,7 +262,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-8 mx-auto text-center mt-1">
+                <div class="col-12 mx-auto text-center mt-1">
                     <p class="mb-0 text-secondary">
                         2023 Intel G Service PVT. LTD.
                     </p>
@@ -277,67 +270,8 @@
             </div>
         </div>
     </footer>
-    <!-- <div class="loopple-alert loopple-alert-gradient-dark loopple-alert-dismissible loopple-fade loopple-position-fixed loopple-z-index-9999 loopple-bottom-2 loopple-mx-auto loopple-text-center loopple-right-0 loopple-left-0 loopple-w-50" role="alert"><strong>View and edit your project online</strong><a class="loopple-btn loopple-btn-white loopple-ml-2" href="https://www.loopple.com/builder/project-2cpR3tT7XukZOW2WadwuRHJxFZ6V0CW5ZSF" target="_blank">Editor</a><button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button></div> -->
-    <script
-        src="https://cdn.jsdelivr.net/gh/creativetimofficial/public-assets@master/soft-ui-design-system-builder/v1.0.7/assets/js/core/bootstrap.min.js"
-        type="text/javascript"></script>
-    <script
-        src="https://cdn.jsdelivr.net/gh/creativetimofficial/public-assets@master/soft-ui-design-system-builder/v1.0.7/assets/js/soft-design-system.js"
-        type="text/javascript"></script>
-    <script
-        src="https://cdn.jsdelivr.net/gh/creativetimofficial/public-assets@master/soft-ui-design-system-builder/v1.0.7/assets/js/plugins/countup.min.js"
-        type="text/javascript"></script>
-    <script
-        src="https://cdn.jsdelivr.net/gh/creativetimofficial/public-assets@master/soft-ui-design-system-builder/v1.0.7/assets/js/plugins/flatpickr.min.js"></script>
-    <script
-        src="https://cdn.jsdelivr.net/gh/creativetimofficial/public-assets@master/soft-ui-design-system-builder/v1.0.7/assets/js/plugins/typedjs.js"></script>
-    <script>
-        if (document.getElementById("state1")) {
-            const countUp = new CountUp("state1", document.getElementById("state1").getAttribute("countTo"));
-            if (!countUp.error) {
-                countUp.start();
-            } else {
-                console.error(countUp.error);
-            }
-        }
-        if (document.getElementById("state2")) {
-            const countUp1 = new CountUp("state2", document.getElementById("state2").getAttribute("countTo"));
-            if (!countUp1.error) {
-                countUp1.start();
-            } else {
-                console.error(countUp1.error);
-            }
-        }
-        if (document.getElementById("state3")) {
-            const countUp2 = new CountUp("state3", document.getElementById("state3").getAttribute("countTo"));
-            if (!countUp2.error) {
-                countUp2.start();
-            } else {
-                console.error(countUp2.error);
-            };
-        }
-
-        if (document.querySelector('.datepicker-1')) {
-            flatpickr('.datepicker-1', {
-            }); // flatpickr
-        }
-
-        if (document.querySelector('.datepicker-2')) {
-            flatpickr('.datepicker-2', {
-            }); // flatpickr
-        }
-        if (document.getElementById("typed")) {
-            var typed = new Typed("#typed", {
-                stringsElement: "#typed-strings",
-                typeSpeed: 70,
-                backSpeed: 50,
-                backDelay: 200,
-                startDelay: 500,
-                loop: true
-            });
-        }
-    </script>
-    <script src="./assets/js/loopple/loopple.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
     <script>
         // Get the button
         let mybutton = document.getElementById("myBtn");
@@ -352,11 +286,29 @@
                 mybutton.style.display = "none";
             }
         }
-
-        // When the user clicks on the button, scroll to the top of the document
-        function topFunction() {
-            document.body.scrollTop = 0;
-            document.documentElement.scrollTop = 0;
-        }
+    </script>
+    <script>
+        $(document).ready(function () {
+            $('.customer-logos').slick({
+                slidesToShow: 5,
+                slidesToScroll: 1,
+                autoplay: true,
+                autoplaySpeed: 1500,
+                arrows: false,
+                dots: false,
+                pauseOnHover: false,
+                responsive: [{
+                    breakpoint: 768,
+                    settings: {
+                        slidesToShow: 3
+                    }
+                }, {
+                    breakpoint: 520,
+                    settings: {
+                        slidesToShow: 1
+                    }
+                }]
+            });
+        });
     </script>
 </body>
